fixed the screenshots alignment

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -147,6 +147,7 @@ nav
             background-color: $verylightgrey
     .screenshots
         margin: 40px 0 0 10px
+        max-width: 440px
         .screenshot
             width: 200px
             height: 150px
@@ -248,6 +249,7 @@ rate-box
     margin-top: 20px
     line-height: 1.2
     font-size: .9em
+
 .footer
     position: fixed
     bottom: 0
